# colcon-sanitizer-reports

./: setup.cfg
colcon_sanitizer_reports/: report.py  sanitizer_log_parser.py
colcon_sanitizer_reports/event_handlers/: __init__.py  asan_report.py  sanitizer_report.py  tsan_report.py  xml_helpers.py
test/: entry_point_context.py  test_colcon_extension.py  test_event_handler_sanitizer_report.py  test_event_handler_sanitizer_reports.py  test_flake8.py  test_report.py  test_sanitizer_log_parser.py  test_tsan_report.py
test/resources/data_race_and_lock_order_inversion_interleaved_output/: expected_output.csv  expected_output.xml
test/resources/data_race_different_keys/: expected_output.csv  expected_output.xml
test/resources/detected_memory_leaks_multiple_subsections_direct_and_indirect_leaks/: expected_output.csv  expected_output.xml
test/resources/lock_order_inversion_same_key/: expected_output.csv  expected_output.xml
test/resources/no_errors/: expected_output.csv  expected_output.xml
test/resources/segv/: expected_output.csv  expected_output.xml
tests/: test_report.py
